--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -3,18 +3,11 @@ name: Django CI
 on:
   push:
     branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-    strategy:
-      max-parallel: 4
-      matrix:
-        python-version: [3.7, 3.8, 3.9]
 
     steps:
-    - name: Run 
-      run: "hola mundo"
+    - name: "Run" 
+     run: echo "hola mundo"
